feat: create url to create a 1px placeholder
